--- a/PopulateList/src/populatelist/FXMLDocument.fxml
+++ b/PopulateList/src/populatelist/FXMLDocument.fxml
@@ -10,10 +10,11 @@
   <children>
     <Button fx:id="button" layoutX="30.0" layoutY="29.0" onAction="#handleButtonAction" text="Click Me!" />
     <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <ListView fx:id="lvPeople" layoutX="143.0" layoutY="120.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="lvPeople" layoutX="163.0" layoutY="75.0" prefHeight="200.0" prefWidth="200.0" />
       <TextField fx:id="tfFirstName" layoutX="50.0" layoutY="350.0" />
       <TextField fx:id="tfLastName" layoutX="50.0" layoutY="418.0" />
       <Label layoutX="53.0" layoutY="320.0" text="First Name" />
       <Label layoutX="53.0" layoutY="388.0" text="Last Name" />
+      <Button fx:id="btnAddPerson" layoutX="298.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#handleBtnAddPersonClicked" text="Add" />
   </children>
 </AnchorPane>
